# PtxJit

./: .gitignore  CMakeLists.txt
include/ptxjit/: assembler.hpp  kernel.hpp  operand.hpp  param.hpp  type.hpp
include/ptxjit/detail/: fragment.hpp  meta.hpp
tests/: CMakeLists.txt  main.cpp  ptx.cpp
